mise à jour logo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
     <link rel="stylesheet" href="css/colors/default.css" id="colorSkinCSS">
 </head>
 <body class="crm_body_bg">
-
+    <style>
+        .sidebar .logo .large_logo img {
+        width: 70%;
+        margin-left: 15%;
+    }
+    </style>
 
 
 
