--- a/index_2.html
+++ b/index_2.html
@@ -48,7 +48,12 @@
 </head>
 <body class="crm_body_bg">
 
-
+    <style>
+        .sidebar .logo .large_logo img {
+        width: 70%;
+        margin-left: 15%;
+    }
+    </style>
 
 
 <nav class="sidebar">
