--- a/index_3.html
+++ b/index_3.html
@@ -51,7 +51,12 @@
 </head>
 <body class="crm_body_bg">
     
-
+    <style>
+        .sidebar .logo .large_logo img {
+        width: 70%;
+        margin-left: 15%;
+    }
+    </style>
 
 <!-- main content part here -->
  
