--- a/user_list.html
+++ b/user_list.html
@@ -9,8 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Management Admin</title>
 
-    <link rel="icon" href="img/mini_logo.png" type="image/png">
-
+    <link rel="icon" href="img/mini_logo.png" type="image/png" style="width: 50%;">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
 
     <link rel="stylesheet" href="vendors/themefy_icon/themify-icons.css" />
@@ -47,7 +46,12 @@
     <link rel="stylesheet" href="css/colors/default.css" id="colorSkinCSS">
 </head>
 <body class="crm_body_bg">
-
+<style>
+    .sidebar .logo .large_logo img {
+    width: 70%;
+    margin-left: 15%;
+}
+</style>
 
 
 
