--- a/user_list.html
+++ b/user_list.html
@@ -7,7 +7,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Management Admin</title>
+    <title>E-maquis  Admin</title>
 
     <link rel="icon" href="img/mini_logo.png" type="image/png" style="width: 50%;">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -435,7 +435,7 @@
     </div>
 </div>
 
-<!--/### CHAT_MESSAGE_BOX  ### -->
+
 
 <div id="back-top" style="display: none;">
     <a title="Go to Top" href="#">
@@ -443,27 +443,27 @@
     </a>
 </div>
 
-<!-- footer  -->
+
 <script src="js/jquery-3.4.1.min.js"></script>
-<!-- popper js -->
+
 <script src="js/popper.min.js"></script>
-<!-- bootstarp js -->
+
 <script src="js/bootstrap.min.js"></script>
-<!-- sidebar menu  -->
+
 <script src="js/metisMenu.js"></script>
-<!-- waypoints js -->
+
 <script src="vendors/count_up/jquery.waypoints.min.js"></script>
-<!-- waypoints js -->
+
 <script src="vendors/chartlist/Chart.min.js"></script>
-<!-- counterup js -->
+
 <script src="vendors/count_up/jquery.counterup.min.js"></script>
 
-<!-- nice select -->
+
 <script src="vendors/niceselect/js/jquery.nice-select.min.js"></script>
-<!-- owl carousel -->
+
 <script src="vendors/owl_carousel/js/owl.carousel.min.js"></script>
 
-<!-- responsive table -->
+
 <script src="vendors/datatable/js/jquery.dataTables.min.js"></script>
 <script src="vendors/datatable/js/dataTables.responsive.min.js"></script>
 <script src="vendors/datatable/js/dataTables.buttons.min.js"></script>
@@ -474,7 +474,6 @@
 <script src="vendors/datatable/js/buttons.html5.min.js"></script>
 <script src="vendors/datatable/js/buttons.print.min.js"></script>
 
-<!-- datepicker  -->
 <script src="vendors/datepicker/datepicker.js"></script>
 <script src="vendors/datepicker/datepicker.en.js"></script>
 <script src="vendors/datepicker/datepicker.custom.js"></script>
@@ -482,11 +481,11 @@
 <script src="js/chart.min.js"></script>
 <script src="vendors/chartjs/roundedBar.min.js"></script>
 
-<!-- progressbar js -->
+
 <script src="vendors/progressbar/jquery.barfiller.js"></script>
-<!-- tag input -->
+
 <script src="vendors/tagsinput/tagsinput.js"></script>
-<!-- text editor js -->
+
 <script src="vendors/text_editor/summernote-bs4.js"></script>
 
 
@@ -496,5 +495,5 @@
 <script src="js/custom.js"></script>
 </body>
 
-<!-- Mirrored from demo.dashboardpack.com/user-management-html/user_list.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 05 Jul 2021 17:20:09 GMT -->
+
 </html>
