--- a/add_new_user.html
+++ b/add_new_user.html
@@ -164,7 +164,7 @@
 
                         </div>
                         <div class="profile_info">
-                            <img src="img/client_img.png" alt="#">
+                            <img src="img/aniki.jpg" alt="#">
                             <div class="profile_info_iner">
                                 <div class="profile_author_name">
                                     <p>Aniki </p>
