--- a/data_table.html
+++ b/data_table.html
@@ -51,6 +51,25 @@
     width: 70%;
     margin-left: 15%;
 }
+#status_btnn {
+    display: inline-block;
+    padding: 2px 15px;
+    font-size: 11px;
+    font-weight: 300;
+    color: #fff !important;
+    background: #ff9409;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    border-radius: 30px;
+    text-transform: capitalize;
+    white-space: nowrap;
+    min-width: 70px;
+    text-align: center;
+}
+.lms_checkbox_1 input:checked + .slider-check:before {
+    transform: translateX(20px);
+    background: #2eec1c;
+}
 </style>
 
 
@@ -198,115 +217,75 @@
         </div>
     </div>
     <!--/ menu  -->
-    <div class="main_content_iner overly_inner ">
-        <div class="container-fluid p-0 ">
-            <!-- page title  -->
-              <!-- page title  -->
-              <div class="row">
-                <div class="col-12">
-                    <div class="page_title_box d-flex flex-wrap align-items-center justify-content-between">
-                        <div class="page_title_left d-flex align-items-center">
-                            <h3 class="f_s_25 f_w_700 dark_text mr_30" >Tableau de bord</h3>
-                            <ol class="breadcrumb page_bradcam mb-0">
-                                <li class="breadcrumb-item"><a href="javascript:void(0);">Acceuil</a></li>
-                                <li class="breadcrumb-item active">Analyse</li>
-                            </ol>
-                        </div>
-                        <div class="page_title_right">
-                            <div class="page_date_button d-flex align-items-center"> 
-                                <img src="img/icon/calender_icon.svg" alt="">
-                                1  Août 2021 
+    <div class="main_content_iner ">
+        <div class="container-fluid p-0">
+            <div class="row justify-content-center">
+                <div class="col-lg-12">
+                    <div class="white_card card_height_100 mb_30">
+                        <div class="white_card_header">
+                            <div class="box_header m-0">
+                                <div class="main-title">
+                                    <h3 class="m-0">Liste des ventes</h3>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="white_card card_height_100 mb_30 pt-4">
                         <div class="white_card_body">
                             <div class="QA_section">
                                 <div class="white_box_tittle list_header">
-                                    <h4>Liste des empoyés</h4>
+                                    <h4>recap</h4>
                                     <div class="box_right d-flex lms_block">
                                         <div class="serach_field_2">
                                             <div class="search_inner">
                                                 <form Active="#">
                                                     <div class="search_field">
-                                                        <input type="text" placeholder="Search content here...">
+                                                        <input type="text" placeholder="rechercher une vente...">
                                                     </div>
                                                     <button type="submit"> <i class="ti-search"></i> </button>
                                                 </form>
                                             </div>
                                         </div>
-                                        <div class="add_button ml-10">
-                                            <a href="#" data-toggle="modal" data-target="#addcategory" class="btn_1">search</a>
-                                        </div>
+                                        <!-- <div class="add_button ml-10">
+                                            <a href="#" data-toggle="modal" data-target="#addcategory" class="btn_1">Ajouter une vente</a>
+                                        </div> -->
                                     </div>
                                 </div>
-        
+
                                 <div class="QA_table mb_30">
                                     <!-- table-responsive -->
-                                    <table class="table lms_table_active ">
+                                    <table class="table lms_table_active3 ">
                                         <thead>
                                             <tr>
-                                                <th scope="col">id</th>
-                                                <th scope="col">Nom</th>
-                                                <th scope="col">prenom</th>
-                                                <th scope="col">Numero</th>
-                                                <th scope="col">Email Address</th>
-                                                
-                                                <th scope="col">Role</th>
+                                                <th scope="col">Produit</th>
+                                                <th scope="col">Categories</th>
+                                                <th scope="col">Vendeur / Vendeuse</th>
+                                                <th scope="col">Quantité</th>
+                                                <th scope="col">Prix</th>
                                                 <th scope="col">Status</th>
-                                                <th scope="col">Action</th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr>
-                                                <th scope="row"> <a href="#" class="question_content"> 1 </a></th>
-                                                <td>Aniki</td>
-                                                <td>sly</td>
-                                                <td>01020304</td>
-                                                <td>aniki@gmail.com</td>
-                                                <td><a href="#" >Admin</a></td>
-                                                <td><a href="#" class="status_btn">Active</a></td>
-                                                <td>
-                                                    <div class="action_btns d-flex">
-                                                        <a href="#" class="action_btn mr_10"> <i class="far fa-edit"></i> </a>
-                                                        <a href="#" class="action_btn"> <i class="fas fa-trash"></i> </a>
+                                            <tr >
+                                                <td style="font-size: 15px;">Ivoire 66</td>
+                                                <td style="font-size: 15px;">Bierre</td>
+                                                <td style="font-size: 15px;">ines kouassi</td>
+                                                <td style="font-size: 15px;">10</td>
+                                                <td style="font-size: 15px;">650 FCFA</td>
+                                                <td style="font-size: 15px;">
+                                                    <div class="checkbox_wrap d-flex align-items-center">
+                                                        <label class="lms_checkbox_1" for="course_1">
+                                                            <input type="checkbox" id="course_1">
+                                                            <div class="slider-check round"></div>
+                                                        </label>
                                                     </div>
                                                 </td>
                                             </tr>
-                                            <tr>
-                                                <th scope="row"> <a href="#" class="question_content"> 2 </a></th>
-                                                <td>eric</td>
-                                                <td>charle</td>
-                                                <td>020405608</td>
-                                                <td>eric@gmail.com</td>
-                                                <td><a href="#" >Gestionnaire</a></td>
-                                                <td><a href="#" class="status_btn">Active</a></td>
-                                                <td>
-                                                    <div class="action_btns d-flex">
-                                                        <a href="#" class="action_btn mr_10"> <i class="far fa-edit"></i> </a>
-                                                        <a href="#" class="action_btn"> <i class="fas fa-trash"></i> </a>
-                                                    </div>
-                                                </td>
-                                            </tr>
-
-                                            <tr>
-                                                <th scope="row"> <a href="#" class="question_content"> 3 </a></th>
-                                                <td>kody</td>
-                                                <td>nina</td>
-                                                <td>0454487054</td>
-                                                <td>ninia@gmail.com</td>
-                                                <td><a href="#" >serveur(euse)</a></td>
-                                                <td><a href="#" class="status_btn">Active</a></td>
-                                                <td>
-                                                    <div class="action_btns d-flex">
-                                                        <a href="#" class="action_btn mr_10"> <i class="far fa-edit"></i> </a>
-                                                        <a href="#" class="action_btn"> <i class="fas fa-trash"></i> </a>
-                                                    </div>
-                                                </td>
+                                            <tr >
+                                                <td style="font-size: 15px;">Orangina </td>
+                                                <td style="font-size: 15px;">Limonade</td>
+                                                <td style="font-size: 15px;">ines kouassi</td>
+                                                <td style="font-size: 15px;">5</td>
+                                                <td style="font-size: 15px;">500 FCFA</td>
+                                                <td style="font-size: 15px;"><a href="#" class="status_btn">Commande livrée</a></td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -333,7 +312,6 @@
 </div>
 </section>
 <!-- main content part end -->
-
 <!-- ### CHAT_MESSAGE_BOX   ### -->
 
 <div class="CHAT_MESSAGE_POPUPBOX">
@@ -448,35 +426,24 @@
     </div>
 </div>
 
-
-
+<!--/### CHAT_MESSAGE_BOX  ### -->
 <div id="back-top" style="display: none;">
     <a title="Go to Top" href="#">
         <i class="ti-angle-up"></i>
     </a>
-</div>
-
-
+  </div>
+<!-- footer  -->
+<!-- footer  -->
+<!-- jquery slim -->
 <script src="js/jquery-3.4.1.min.js"></script>
-
+<!-- popper js -->
 <script src="js/popper.min.js"></script>
-
+<!-- bootstarp js -->
 <script src="js/bootstrap.min.js"></script>
-
+<!-- sidebar menu  -->
 <script src="js/metisMenu.js"></script>
 
-<script src="vendors/count_up/jquery.waypoints.min.js"></script>
-
-<script src="vendors/chartlist/Chart.min.js"></script>
-
-<script src="vendors/count_up/jquery.counterup.min.js"></script>
-
-
-<script src="vendors/niceselect/js/jquery.nice-select.min.js"></script>
-
-<script src="vendors/owl_carousel/js/owl.carousel.min.js"></script>
-
-
+<!-- responsive table -->
 <script src="vendors/datatable/js/jquery.dataTables.min.js"></script>
 <script src="vendors/datatable/js/dataTables.responsive.min.js"></script>
 <script src="vendors/datatable/js/dataTables.buttons.min.js"></script>
@@ -487,26 +454,16 @@
 <script src="vendors/datatable/js/buttons.html5.min.js"></script>
 <script src="vendors/datatable/js/buttons.print.min.js"></script>
 
-<script src="vendors/datepicker/datepicker.js"></script>
-<script src="vendors/datepicker/datepicker.en.js"></script>
-<script src="vendors/datepicker/datepicker.custom.js"></script>
+<!-- scrollabe  -->
+<script src="vendors/scroll/perfect-scrollbar.min.js"></script>
+<script src="vendors/scroll/scrollable-custom.js"></script>
 
-<script src="js/chart.min.js"></script>
-<script src="vendors/chartjs/roundedBar.min.js"></script>
-
-
-<script src="vendors/progressbar/jquery.barfiller.js"></script>
-
-<script src="vendors/tagsinput/tagsinput.js"></script>
-
-<script src="vendors/text_editor/summernote-bs4.js"></script>
-
-
-
-
-
+<!-- custom js -->
 <script src="js/custom.js"></script>
+
+
+
 </body>
 
-
+<!-- Mirrored from demo.dashboardpack.com/user-management-html/data_table.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 05 Jul 2021 17:20:14 GMT -->
 </html>
