--- a/index_2.html
+++ b/index_2.html
@@ -96,7 +96,20 @@
             </ul>
         </li>
 
-
+        <li class="">
+            <a   class="has-arrow" href="#" aria-expanded="false">
+              <div class="nav_icon_small">
+                <img src="img/menu-icon/5.svg" alt="">
+            </div>
+            <div class="nav_title">
+                <span>Vente</span>
+            </div>
+            </a>
+            <ul>
+              <li><a href="data_table.html"> Liste des ventes</a></li>
+              <li><a href="#">ajouter</a></li>
+            </ul>
+        </li>
       </ul>
 </nav>
  <!--/ sidebar  -->
@@ -167,11 +180,11 @@
 
                         </div>
                         <div class="profile_info">
-                            <img src="img/client_img.png" alt="#">
+                            <img src="img/aniki.jpgx" alt="#">
                             <div class="profile_info_iner">
                                 <div class="profile_author_name">
                                     <p>Aniki </p>
-                                    <h5>Dr. Robar Smith</h5>
+                                    <h5>Developpeur</h5>
                                 </div>
                                 <div class="profile_info_details">
                                     <a href="#">Mon Profil </a>
