--- a/index_3.html
+++ b/index_3.html
@@ -170,11 +170,11 @@
 
                     </div>
                     <div class="profile_info">
-                        <img src="img/client_img.png" alt="#">
+                        <img src="img/aniki.jpg" alt="#">
                         <div class="profile_info_iner">
                             <div class="profile_author_name">
                                 <p>Aniki </p>
-                                <h5>Dr. Robar Smith</h5>
+                                <h5>Developpeur</h5>
                             </div>
                             <div class="profile_info_details">
                                 <a href="#">Mon Profil </a>
